# Prompt-Refinement-Engine-PRE

./: .gitignore  EPICS_AND_STORIES_v2.md  README.md  SRS_PRE_v2.md  pyproject.toml  requirements.txt  run.py
pre/api/: service.py
pre/core/: errors.py  pipeline.py  resource_loader.py
pre/core/determinism/: canonical.py
pre/core/llm/: inference.py  loader.py
pre/core/logging/: decision_log.py
pre/core/models/: input.py  output.py
pre/resources/: checkpoints.json
pre/tests/: conftest.py  test_canonical.py  test_decision_log.py  test_gpu_runtime.py  test_health.py  test_inference_contract.py  test_llm_loader.py  test_pipeline_integration.py  test_refine_api.py  test_resource_loader.py
