[project]
name = "pre"
version = "2.0.0"
description = "Prompt Refinement Engine (PRE) — local-LLM prompt expansion for image generation pipelines."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["pre/tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pre*"]
